--- a/src/pages/company/index.scss
+++ b/src/pages/company/index.scss
@@ -1,4 +1,4 @@
-.home {
+.company {
     .item-img {
       width: 100%;
     }
@@ -10,7 +10,7 @@
       color: #004277;
     }
     .company-profile {
-        font-size: 20px;
+        font-size: 30px;
     }
   }
   
