--- a/src/pages/company/index.scss
+++ b/src/pages/company/index.scss
@@ -1,18 +1,20 @@
 .company {
-    .item-img {
-      width: 100%;
-    }
-    .at-noticebar {
-      color: #004277;
-      background: #ecf5fc;
-    }
-    .line {
-      color: #004277;
-    }
-    .company-profile {
-        font-size: 30px;
-    }
+  .item-img {
+    width: 100%;
   }
-  
- 
-  
+  .at-noticebar {
+    color: #004277;
+    background: #ecf5fc;
+  }
+  .line {
+    color: #004277;
+  }
+  .company-profile {
+    font-size: 30px;
+    height: 100px;
+  }
+  .company-profile-w {
+    font-size: 30px;
+    font-weight: 600;
+  }
+}
