--- a/src/pages/home/index.scss
+++ b/src/pages/home/index.scss
@@ -14,12 +14,12 @@
       flex-direction: column;
       align-items: center;
       .at-img {
-        width: 50%;
+        width: 55%;
         border-radius: 50%;
       }
       .at-name {
         text-align: center;
-        font-size: 22px;
+        font-size: 30px;
         color: #004277;
       }
     }
@@ -47,19 +47,25 @@
     }
     .item-name {
       text-align: center;
-      font-size: 30px;
+      font-size: 40px;
       color: #004277;
     }
     .item-sub-name {
       text-align: center;
-      font-size: 18px;
+      font-size: 25px;
+      line-height: 30px;
       color: #004277;
     }
     .item-button {
       display: inline-block;
-      font-size: 16px;
-      height: 40px;
-      line-height: 40px;
+      margin-top: 10px;
+      margin-bottom: 10px;
+      font-size: 25px;
+      height: 50px;
+      line-height: 45px;
+      button {
+        padding-bottom: 13px !important;
+      }
     }
   }
 }
