--- a/src/pages/home/index.scss
+++ b/src/pages/home/index.scss
@@ -14,8 +14,10 @@
       flex-direction: column;
       align-items: center;
       .at-img {
-        width: 55%;
+        width: 100px;
+        height: 100px;
         border-radius: 50%;
+        overflow: hidden
       }
       .at-name {
         text-align: center;
@@ -33,11 +35,12 @@
   background-color: #f3f3f3;
   display: flex;
   padding-right: 12px;
+  flex-wrap: wrap;
   .item {
     margin-left: 12px;
     margin-top: 12px;
     margin-bottom: 12px;
-    width: 50%;
+    width: 48%;
     display: flex;
     flex-direction: column;
     background-color: #fff;
