--- a/src/pages/list/index.scss
+++ b/src/pages/list/index.scss
@@ -12,11 +12,12 @@
   background-color: #f3f3f3;
   display: flex;
   padding-right: 12px;
+  flex-wrap: wrap;
   .item {
     margin-left: 12px;
     margin-top: 12px;
     margin-bottom: 12px;
-    width: 50%;
+    width: 48%;
     display: flex;
     flex-direction: column;
     background-color: #fff;
